# PGB1

./: .gitignore  CLAUDE.md  CODE_INDEX.md  INDEX.md  README.md  index.html  package-lock.json  package.json  开发规范.md  文档组织规范.md  设计风格.md  项目指南.md
.claude/commands/: onboard.md
design/: DesignSystem.md  Prototype特例规则.md  README.md  任务系统.md  卡片设计.md  文件命名与组织规则.md  界面设计.md  自动化识别规则.md  项目规划.md
docs/: MIGRATION_CHECKLIST.md  代码审查报告.md  打包发布指南.md
docs/plans/: 2026-02-17-phase1-scaffold-and-shell.md  2026-02-17-phase2-page-navigation.md  2026-02-17-phase3a-cards-and-rust-backend.md  2026-02-17-phase4a-material-cards-and-task-page.md  2026-02-17-phase4b-sequence-preview-versions-prototype.md  2026-02-18-phase5b-normalize.md  2026-02-18-phase5c-scaling.md  2026-02-18-phase6-settings.md  2026-02-18-phase7-shortcuts.md  2026-02-19-attendance-dismiss-once-per-day.md  2026-02-20-pdf-preview.md  2026-02-20-project-management.md  2026-02-20-sequence-sidebar-extras.md  2026-02-20-task-list-page.md  2026-02-20-titlebar-status-bar.md  2026-02-20-video-thumbnail-and-preview.md  2026-02-24-attendance-mode.md  2026-02-24-rust-defensive-fixes.md  2026-02-27-sort-and-priority.md  (+3 more)
sessions/: README.md  project_history.md  session_2026-02-13.md  session_2026-02-14.md  session_2026-02-15.md  session_2026-02-16.md  session_2026-02-17.md  session_2026-02-21.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  conversion.rs  hotkey.rs  lib.rs  main.rs  models.rs  scheduler.rs
(+89 files in other folders)
